--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -139,19 +139,21 @@ input:focus {
     box-shadow: 0px 0px 5px 5px rgba(208,208,213,0.75);
     padding: 1% 2% 0.5% 2%;
 }
+#markdown-content {
+    width: 100%;
+    padding: 1%;
+}
 .copy-button {
     border: 2px solid var(--grey-15);
     padding: 1%;
     text-align: center;
     cursor: pointer;
-    /* justify-self: flex-end; */
 }
 .markdown-util {
     display: flex;
     justify-content: flex-end;
 }
 .preview-button {
-    /* justify-self: flex-end; */
     border: 2px solid var(--grey-15);
     padding: 1%;
     text-align: center;
@@ -257,7 +259,6 @@ a {
     width: 40px;
     height: 40px;
 }
-.skills-preview {}
 .skill-preview-icon {
     width: 40px;
     height: 40px;
@@ -281,8 +282,8 @@ a {
         width: 60%;
     }
     .back-button {
-        width: 35%;
-        font-size: 14px;
+        width: 45%;
+        font-size: 12px;
     }
     .cardImage {
         width: 200px;
@@ -299,7 +300,7 @@ a {
     }
     .github-button {
         font-size: 10px !important;
-        padding: 0.5% 0.1% !important;
+        padding: 2% 1% !important;
         width: 120px;
     }
     .logo {
@@ -319,5 +320,9 @@ a {
         width: 20px;
         height: 20px;
         margin: 1%;
+    }
+    .copy-button, .preview-button {
+        margin: 0.2%;
+        padding: 0.5% 2%;
     }
 }
