fix: social mobile view

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -370,9 +370,6 @@ a {
         word-break: break-all;
     }
     .tooltiptext {
-        visibility: hidden;
-    }
-    .skillCheckboxLabel:hover .tooltiptext {
-        visibility: hidden;
+        display: none;
     }
 }
